Use sideEffects: Some to avoid notifying when we encounter a dry-run request

--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -72,6 +72,7 @@ metadata:
 webhooks:
 - name: kubemen.numberly.com
   failurePolicy: Ignore
+  sideEffects: Some
   rules:
   - operations: ["CREATE", "UPDATE", "DELETE"]
     apiGroups: ["*"]
