Group app files in a kubemen folder

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,10 @@
 [flake8]
 ignore = E125,E129,W503,W504
-exclude = .venv/,.git/,ipython_config.py
+exclude = .venv/,.git/,tests/conftest.py,ipython_config.py,config.py
 
 [isort]
 line_length = 79
 indent='    '
 multi_line_output = 0
-skip = .venv/,.git/,ipython_config.py
+skip = .venv/,.git/,tests/conftest.py,ipython_config.py
+known_first_party = kubemen,tests
