--- a/deploy/kubemen.yaml
+++ b/deploy/kubemen.yaml
@@ -1,73 +1,4 @@
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: kubemen
-
----
-kind: Role
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: kubemen
-  labels:
-    app: kubemen
-  namespace: kubemen
-rules:
-- apiGroups: ["*"]
-  resources: [
-  "cronjobs",
-  "daemonsets",
-  "deployments",
-  "events",
-  "horizontalpodautoscalers",
-  "ingresses",
-  "jobs",
-  "pods",
-  "replicasets",
-  "replicationcontrollers",
-  "services",
-  "statefulsets",
-  "certificates",
-  "configmaps",
-  "endpoints",
-  "limitranges",
-  "networkpolicies",
-  "persistentvolumeclaims",
-  "resourcequotas",
-  "rolebindings",
-  "roles",
-  "secrets",
-  "serviceaccounts"
-  ]
-  verbs: ["get", "watch", "list"]
-
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: kubemen
-  labels:
-    app: kubemen
-  namespace: kubemen
-
----
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: RoleBinding
-metadata:
-  name: kubemen
-  labels:
-    app: kubemen
-  namespace: kubemen
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: kubemen
-subjects:
-  - kind: ServiceAccount
-    name: kubemen
-    namespace: kubemen
-
----
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
@@ -114,6 +45,7 @@ webhooks:
       name: kubemen
       namespace: kubemen
       path: "/"
+    caBundle: ${CA_BUNDLE}
   admissionReviewVersions:
   - v1beta1
   timeoutSeconds: 1
@@ -143,19 +75,25 @@ spec:
         image: numberly/kubemen
         env:
         - name: GUNICORN_CMD_ARGS
-          value: "-b 0.0.0.0 -k gevent --access-logfile '-'"
+          value: "-b 0.0.0.0:44300 -k gevent --access-logfile '-' --certfile=/etc/ssl/kubemen/cert.pem --keyfile=/etc/ssl/kubemen/key.pem"
         - name: MATTERMOST_HOOK_URL
           value: ""
         ports:
-        - containerPort: 8000
+        - containerPort: 44300
+        volumeMounts:
+        - name: certs
+          mountPath: /etc/ssl/kubemen
+          readOnly: true
         readinessProbe:
           httpGet:
+            scheme: HTTPS
             path: /
-            port: 8000
+            port: 44300
         livenessProbe:
           httpGet:
+            scheme: HTTPS
             path: /
-            port: 8000
+            port: 44300
         resources:
           limits:
             cpu: 50m
@@ -163,6 +101,10 @@ spec:
           requests:
             cpu: 50m
             memory: 64Mi
+      volumes:
+      - name: certs
+        secret:
+          secretName: kubemen-certs
 
 ---
 apiVersion: v1
@@ -177,6 +119,6 @@ spec:
   selector:
     app: kubemen
   ports:
-  - port: 80
+  - port: 443
     protocol: TCP
-    targetPort: 8000
+    targetPort: 44300
