--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [tool:pytest]
 testpaths = tests
 python_files = *.py
-addopts = -vv --showlocals --cov-report term-missing --cov kubemen --no-cov-on-fail
+addopts = -vv --showlocals --cov-report term-missing --cov kubemen --no-cov-on-fail --cov-fail-under 100
 
 [flake8]
 ignore = E125,E129,W503,W504
