--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+[tool:pytest]
+testpaths = tests
+python_files = *.py
+addopts = -vv --showlocals --cov-report term-missing --cov kubemen --no-cov-on-fail
+
 [flake8]
 ignore = E125,E129,W503,W504
 exclude = .venv/,.git/,tests/conftest.py,ipython_config.py,config.py
