--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
+dist: xenial
 language: python
 python:
-  - "3.4"
-  - "3.5"
   - "3.6"
-  - "pypy"
+  - "3.7"
   - "pypy3"
 install:
   - pip install -r dev-requirements.txt
