Make Kubemen dryRun-aware
https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#side-effects

--- a/deploy/kubemen.yaml
+++ b/deploy/kubemen.yaml
@@ -9,7 +9,7 @@ metadata:
 webhooks:
 - name: kubemen.kubemen.svc
   failurePolicy: Ignore
-  sideEffects: Some
+  sideEffects: NoneOnDryRun
   rules:
   - operations: ["CREATE", "UPDATE", "DELETE"]
     apiGroups: ["*"]
