RBAC isn't actually needed, Kubernetes API server has access to everything

--- a/deploy/kubemen.yaml
+++ b/deploy/kubemen.yaml
@@ -1,4 +1,10 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kubemen
+
+---
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
